--- a/scss/index.css
+++ b/scss/index.css
@@ -1,3 +1,7 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Dosis:wght@200;300;400;500;600;700;800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Dosis:wght@200;300;400;500;600;700;800&family=Merriweather:wght@300;400;700;900&display=swap");
 @font-face {
   font-family: "square721 ";
   src: url("./font/Square721_BT_Roman.ttf") format("truetype");
@@ -13,7 +17,7 @@
 }
 
 body {
-  font-family: "square721";
+  font-family: "Merriweather", serif;
   line-height: 1.6;
   letter-spacing: 1px;
   font-size: 14px;
@@ -38,6 +42,7 @@ body {
 }
 
 .section-title h2 {
+  font-family: "Dosis", sans-serif;
   font-size: 32px;
   font-weight: bold;
   text-transform: uppercase;
@@ -74,6 +79,10 @@ body {
   color: #ffcd3f;
 }
 
+.section-title h2 p {
+  color: #CFD2D5;
+}
+
 /*--------------------------------------------------------------
 # Breadcrumbs
 --------------------------------------------------------------*/
@@ -90,6 +99,7 @@ margin-top: 72px; */
 }
 
 .breadcrumbs h2 {
+  font-family: "Dosis", sans-serif;
   font-size: 28px;
   font-weight: 600;
   color: white !important;
@@ -146,6 +156,7 @@ margin-top: 72px; */
 }
 
 #header ul li {
+  font-family: "Dosis", sans-serif;
   margin-left: 30px;
   -webkit-transition: 0.3s ease-in-out;
   transition: 0.3s ease-in-out;
@@ -178,6 +189,7 @@ margin-top: 72px; */
 }
 
 .hero-main .hero-left h4 {
+  font-family: "Dosis", sans-serif;
   text-align: center;
   letter-spacing: 0.05em;
   color: #3587c8;
@@ -187,7 +199,7 @@ margin-top: 72px; */
 }
 
 .hero-main .hero-left h4::before {
-  content: '';
+  content: "";
   position: absolute;
   bottom: -14px;
   left: 0%;
@@ -242,6 +254,7 @@ margin-top: 72px; */
 }
 
 .hero-main .hero-right .progressbar li {
+  font-family: "Dosis", sans-serif;
   list-style: none;
   display: inline-block;
   width: 30.33%;
@@ -321,7 +334,7 @@ margin-top: 72px; */
 }
 
 .testimonial-main .testimonial .description {
-  font-size: 15px;
+  font-size: 0.875rem;
   color: #757575;
   line-height: 27px;
   margin-top: 100px;
@@ -331,6 +344,7 @@ margin-top: 72px; */
 .testimonial-main .testimonial .testimonial-profile {
   position: relative;
   margin: 20px 0 10px 0;
+  font-family: "Dosis", sans-serif;
 }
 
 .testimonial-main .testimonial .testimonial-profile::after {
@@ -414,10 +428,12 @@ margin-top: 72px; */
 
 #why-us {
   margin: 80px 0px;
+  padding: 40px 0 40px 0;
   background-color: #fafafa !important;
 }
 
 #why-us .why-content .title-why {
+  font-family: "Dosis", sans-serif;
   font-size: 32px;
   font-weight: bold;
   text-transform: uppercase;
@@ -431,7 +447,7 @@ margin-top: 72px; */
 }
 
 #why-us .why-content p {
-  font-size: 1rem;
+  font-size: 0.875rem;
 }
 
 @media (max-width: 767px) {
@@ -451,13 +467,21 @@ margin-top: 72px; */
 #program .card {
   border-radius: 3px;
   border: 1px solid #e9eced;
+  overflow: hidden;
+}
+
+#program .card .imagee {
+  width: 100%;
+  height: 200px;
+  overflow: hidden;
 }
 
 #program .card img {
   width: 100%;
-  height: 300px;
   -o-object-fit: cover;
      object-fit: cover;
+  -webkit-transform: scale(1.6);
+          transform: scale(1.6);
 }
 
 #program .card .card-content {
@@ -465,6 +489,7 @@ margin-top: 72px; */
 }
 
 #program .card .card-content h4 {
+  font-family: "Dosis", sans-serif;
   margin-top: 15px;
   font-size: 24px;
   font-weight: bold;
@@ -473,7 +498,7 @@ margin-top: 72px; */
 
 #program .card .card-content p {
   text-align: start;
-  font-size: 1rem;
+  font-size: 0.875rem;
   margin-top: 10px;
   line-height: 1.5;
   color: #434343;
@@ -493,6 +518,10 @@ margin-top: 72px; */
 --------------------------------------------------------------*/
 .contact {
   margin-top: 80px;
+}
+
+.contact .section-title p {
+  color: #9B757D;
 }
 
 .contact .info {
@@ -532,6 +561,7 @@ margin-top: 72px; */
   font-weight: 600;
   margin-bottom: 5px;
   color: #37517e;
+  font-family: "Dosis", sans-serif;
 }
 
 .contact .info p {
@@ -809,9 +839,11 @@ footer p {
   color: #3587c8;
   font-size: 14px;
   text-align: start;
+  font-weight: 300;
 }
 
 footer .quick-links h4 {
+  font-family: "Dosis", sans-serif;
   color: #3587c8;
   font-weight: bold;
 }
@@ -832,6 +864,7 @@ footer .quick-links ul li a {
   text-decoration: none;
   color: #3587c8;
   font-size: 14px;
+  font-weight: 300;
 }
 
 @media (max-width: 1000px) {
@@ -846,11 +879,16 @@ footer .quick-links ul li a {
   }
 }
 
+.clinicsDetails {
+  padding: 40px 0 40px 0;
+}
+
 .clinicsDetails .clinics-content {
   margin-top: 70px;
 }
 
 .clinicsDetails h4 {
+  font-family: "Dosis", sans-serif;
   text-transform: uppercase;
   padding: 20px 0 0 0;
   color: #3587c8;
@@ -865,6 +903,7 @@ footer .quick-links ul li a {
 }
 
 .miniAlliess .miniAllies-content .btnn {
+  font-family: "Dosis", sans-serif;
   padding: 15px 20px;
   font-weight: 600;
   font-size: 18px;
@@ -877,9 +916,9 @@ footer .quick-links ul li a {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: start;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   text-align: center;
@@ -935,14 +974,16 @@ footer .quick-links ul li a {
 }
 
 .miniAlliess h6 {
+  font-family: "Dosis", sans-serif;
   color: #3587c8;
   font-weight: 600;
   font-size: 1rem;
 }
 
 .miniAlliess span {
+  font-family: "Dosis", sans-serif;
   color: #3587c8;
-  font-weight: 600;
+  font-weight: 800;
   font-style: italic;
 }
 
@@ -976,7 +1017,8 @@ footer .quick-links ul li a {
 }
 
 .misson h5 {
-  font-size: 1rem;
+  font-family: "Dosis", sans-serif;
+  font-size: 1.2rem;
   text-transform: uppercase;
   color: #3587c8;
 }
@@ -996,6 +1038,7 @@ footer .quick-links ul li a {
 }
 
 .champDetails h4 {
+  font-family: "Dosis", sans-serif;
   text-transform: uppercase;
   padding: 20px 0 0 0;
   color: #3587c8;
