--- a/scss/index.scss
+++ b/scss/index.scss
@@ -1,4 +1,9 @@
 //typo
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Dosis:wght@200;300;400;500;600;700;800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Dosis:wght@200;300;400;500;600;700;800&family=Merriweather:wght@300;400;700;900&display=swap");
+
 @font-face {
   font-family: "square721 ";
   src: url("./font/Square721_BT_Roman.ttf") format("truetype");
@@ -29,7 +34,11 @@ $SB: #fffafa;
 
 //body
 body {
-  font-family: "square721";
+  // font-family: "Roboto", sans-serif;
+  // font-family: 'Open Sans', sans-serif;
+  // font-family: 'Dosis', sans-serif;
+  font-family: "Merriweather", serif;
+  // font-family: "square721";
   line-height: 1.6;
   letter-spacing: 1px;
   font-size: 14px;
@@ -50,6 +59,7 @@ body {
   text-align: center;
   padding-bottom: 20px;
   h2 {
+    font-family: "Dosis", sans-serif;
     font-size: 32px;
     font-weight: bold;
     text-transform: uppercase;
@@ -81,6 +91,9 @@ body {
       font-style: italic;
       color: $SC;
     }
+    p{
+      color: #CFD2D5;
+    }
   }
 }
 
@@ -99,6 +112,7 @@ background: #f3f5fa;
 min-height: 40px;
 margin-top: 72px; */
   h2 {
+    font-family: "Dosis", sans-serif;
     font-size: 28px;
     font-weight: 600;
     color: white !important;
@@ -144,6 +158,7 @@ margin-top: 72px; */
   ul {
     @include MarPad();
     li {
+      font-family: "Dosis", sans-serif;
       margin-left: 30px;
       transition: 0.3s ease-in-out;
       border-bottom: 2px solid transparent;
@@ -171,21 +186,21 @@ margin-top: 72px; */
   .hero-left {
     padding: 0 0 0 20px;
     h4 {
+      font-family: "Dosis", sans-serif;
       text-align: center;
       letter-spacing: 0.05em;
       color: $CM;
       font-weight: 600;
       font-size: 24px;
       position: relative;
-      &::before{
-        content: '';
+      &::before {
+        content: "";
         position: absolute;
         bottom: -14px;
         left: 0%;
         width: 100%;
         height: 2px;
         background-color: $CM;
-
       }
     }
     .clinics-list {
@@ -202,13 +217,13 @@ margin-top: 72px; */
               color: $CM;
               font-weight: 600;
             }
-            .date{
-             background-color: $SB;
-             padding: 5px 15px;
+            .date {
+              background-color: $SB;
+              padding: 5px 15px;
             }
           }
-          .right-list{
-            button{
+          .right-list {
+            button {
               border: none;
               background-color: $CM;
               color: white;
@@ -228,6 +243,7 @@ margin-top: 72px; */
     .progressbar {
       counter-reset: step;
       li {
+        font-family: "Dosis", sans-serif;
         list-style: none;
         display: inline-block;
         width: 30.33%;
@@ -301,7 +317,7 @@ margin-top: 72px; */
       right: 0;
     }
     .description {
-      font-size: 15px;
+      font-size: 0.875rem;
       color: #757575;
       line-height: 27px;
       margin-top: 100px;
@@ -310,6 +326,7 @@ margin-top: 72px; */
     .testimonial-profile {
       position: relative;
       margin: 20px 0 10px 0;
+      font-family: "Dosis", sans-serif;
       &::after {
         content: "";
         width: 50px;
@@ -382,9 +399,11 @@ margin-top: 72px; */
 //why-us
 #why-us {
   margin: 80px 0px;
+  padding: 40px 0 40px 0;
   background-color: #fafafa !important;
   .why-content {
     .title-why {
+      font-family: "Dosis", sans-serif;
       font-size: 32px;
       font-weight: bold;
       text-transform: uppercase;
@@ -396,7 +415,7 @@ margin-top: 72px; */
       }
     }
     p {
-      font-size: 1rem;
+      font-size: 0.875rem;
     }
   }
 
@@ -416,14 +435,22 @@ margin-top: 72px; */
   .card {
     border-radius: 3px;
     border: 1px solid $BC;
+    overflow: hidden;
+    .imagee{
+      width: 100%;
+      height: 200px;
+      overflow: hidden;
+    }
     img {
       width: 100%;
-      height: 300px;
       object-fit: cover;
+      transform: scale(1.6);
+     
     }
     .card-content {
       padding: 0 20px;
       h4 {
+        font-family: "Dosis", sans-serif;
         margin-top: 15px;
         font-size: 24px;
         font-weight: bold;
@@ -431,7 +458,7 @@ margin-top: 72px; */
       }
       p {
         text-align: start;
-        font-size: 1rem;
+        font-size: 0.875rem;
         margin-top: 10px;
         line-height: 1.5;
         color: $CB;
@@ -450,6 +477,11 @@ margin-top: 72px; */
 --------------------------------------------------------------*/
 .contact {
   margin-top: 80px;
+  .section-title{
+    p{
+      color: #9B757D;
+    }
+  }
 }
 .contact .info {
   border-top: 3px solid #47b2e4;
@@ -480,6 +512,7 @@ margin-top: 72px; */
   font-weight: 600;
   margin-bottom: 5px;
   color: #37517e;
+  font-family: "Dosis", sans-serif;
 }
 
 .contact .info p {
@@ -718,9 +751,11 @@ footer {
     color: $CM;
     font-size: 14px;
     text-align: start;
+    font-weight: 300;
   }
   .quick-links {
     h4 {
+      font-family: "Dosis", sans-serif;
       color: $CM;
       font-weight: bold;
     }
@@ -733,6 +768,7 @@ footer {
           text-decoration: none;
           color: $CM;
           font-size: 14px;
+          font-weight: 300;
         }
       }
     }
@@ -751,10 +787,12 @@ footer {
 
 //clinicsDetails
 .clinicsDetails {
+  padding: 40px 0 40px 0;
   .clinics-content {
     margin-top: 70px;
   }
   h4 {
+    font-family: "Dosis", sans-serif;
     text-transform: uppercase;
     padding: 20px 0 0 0;
     color: $CM;
@@ -769,6 +807,7 @@ footer {
   .miniAllies-content {
     margin-top: 70px;
     .btnn {
+      font-family: "Dosis", sans-serif;
       padding: 15px 20px;
       font-weight: 600;
       font-size: 18px;
@@ -779,7 +818,7 @@ footer {
       border-color: $CM;
       text-decoration: none;
       display: flex;
-      justify-content: start;
+      justify-content: center;
       flex-wrap: wrap;
       text-align: center;
     }
@@ -829,13 +868,15 @@ footer {
     }
   }
   h6 {
+    font-family: "Dosis", sans-serif;
     color: $CM;
     font-weight: 600;
     font-size: 1rem;
   }
   span {
+    font-family: "Dosis", sans-serif;
     color: $CM;
-    font-weight: 600;
+    font-weight: 800;
     font-style: italic;
   }
 }
@@ -862,7 +903,8 @@ footer {
     font-size: 18px;
   }
   h5 {
-    font-size: 1rem;
+     font-family: "Dosis", sans-serif;
+    font-size: 1.2rem;
     text-transform: uppercase;
     color: $CM;
   }
@@ -877,11 +919,12 @@ footer {
 }
 
 //champ-details
-.champDetails{
-  .champ-content{
+.champDetails {
+  .champ-content {
     margin: 70px 0;
   }
   h4 {
+    font-family: "Dosis", sans-serif;
     text-transform: uppercase;
     padding: 20px 0 0 0;
     color: $CM;
